<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardTask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/todo_background_todo_app"
    app:cardCornerRadius="22dp">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <EditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/todo_dialod_add_task"
            android:textColor="@color/white"
            android:textColorHint="@color/todo_subtitle_text"
            android:layout_marginBottom="8dp"
            android:imeOptions="actionDone"
            android:inputType="text"/>

        <RadioGroup
            android:id="@+id/rgCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <RadioButton
                android:id="@+id/rbBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/todo_business"
                android:textColor="@color/white"
                android:buttonTint="@color/todo_business_category"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:id="@+id/rbPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_personal"
                android:textColor="@color/white"
                android:buttonTint="@color/todo_personal_category"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_otra"
                android:textColor="@color/white"
                android:buttonTint="@color/todo_other_category"
                android:layout_marginBottom="8dp"/>

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_background"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/todo_btn_dialog_tarea"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>