<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/todo_background_todo_app"
    android:orientation="vertical"
    tools:context=".todoapp.TodoActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/todo_background_todo_app"
        android:orientation="vertical"
        tools:context=".todoapp.TodoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="44dp"
            android:text="@string/todo_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/todo_title_app"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TodoSubtitle"
            android:text="@string/todo_categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TodoSubtitle"
            android:text="@string/todo_todo_tasks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp" />




    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="32dp"
        app:backgroundTint="@color/todo_accent"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white"
        />

</FrameLayout>